--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ PILLOW==7.1.0
 # Requires to install graphviz in conda and also edit PATH variable to include Graphviz
 tensorflow-datasets
 tensorflow_hub
+nltk==3.5
