Cleaned up code. Checked models train on GPU (TF 2.4). Added documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ tensorflow-datasets
 tensorflow_hub
 nltk==3.5
 # From huggingface
-transformers
-datasets
+transformers==4.3.3
+datasets==1.4.1
 # Attention visualize
-bertviz
+bertviz==1.0.0
