Started working on qa with bert. missing requirements added

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ PILLOW==7.1.0
 # Requires to install graphviz in conda and also edit PATH variable to include Graphviz
 tensorflow-datasets
 tensorflow_hub
+tf-models-official==2.4
 nltk==3.5
+imbalanced-learn
 # From huggingface
 transformers==4.3.3
 datasets==1.4.1
 # Attention visualize
 bertviz==1.0.0
-imbalanced-learn
+
