--- a/Ch15-TFX-for-MLOps-in-TF2/requirements.txt
+++ b/Ch15-TFX-for-MLOps-in-TF2/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.19.3
-pandas==0.25.3
+pandas==1.3.0
+#pandas==0.25.3
 jupyter==1.0.0
-tfx==0.30.0
-apache-beam==2.29
+tfx==1.2.0
+#apache-beam==2.29
